...
import { ExpenseType } from "@/types";
import { PieChart } from "react-native-gifted-charts";
import ManageSavingGoals from "./ManageSavingGoals"; // Import CRUD component

const SavingGoals = () => {
  const [savings, setSavings] = useState<ExpenseType[]>([
    { id: "1", name: "Car Fund", amount: "2500.00", totalAmount: "5000.00", percentage: "50" },
    { id: "2", name: "Vacation", amount: "1500.00", totalAmount: "3000.00", percentage: "50" },
    { id: "3", name: "Emergency Fund", amount: "1000.00", totalAmount: "2000.00", percentage: "50" },
  ]);

  const [isManageModalVisible, setManageModalVisible] = useState(false);

...
