appId: com.dineshbali18.expensetrackerapp
---
- launchApp
- tapOn: "Sign in"
- tapOn:
    id: "emailInput"
- inputText:
    id: "emailInput"
    text: "dineshbali45@gmail.com"
- tapOn:
    id: "passwordInput"
- inputText:
    id: "passwordInput"
    text: "gamer45"
- tapOn: "Login"
- tapOn: "OK"
- assertVisible: "🔐 Two-Factor Authentication"
- tapOn:
    id: "otpInput"
- inputText:
    id: "otpInput"
    text: "123456"
- tapOn:
    id: "verifyOtpButton"
- tapOn: "Ok"
- assertVisible: "Expenses"
- tapOn: "Expenses"
- tapOn:
    id: "tab-statistics"
- assertVisible: "Statistics"

# WEEKLY
- tapOn: "Weekly"
- assertVisible: "Expenses:"
- assertVisible: "Income:"
- assertVisible: "Budgets:"
- assertVisible: "Savings Goals:"
- tapOn:
    point: "100,600"
- assertVisible: "Summary"
- tapOn:
    point: "100,900"
- assertVisible: "Summary"
- tapOn:
    point: "100,1200"
- assertVisible: "Summary"
- tapOn:
    point: "100,1500"
- assertVisible: "Summary"

# MONTHLY
- tapOn: "Monthly"
- assertVisible: "Expenses:"
- assertVisible: "Income:"
- assertVisible: "Budgets:"
- assertVisible: "Savings Goals:"
- tapOn:
    point: "100,600"
- assertVisible: "Summary"
- tapOn:
    point: "100,900"
- assertVisible: "Summary"
- tapOn:
    point: "100,1200"
- assertVisible: "Summary"
- tapOn:
    point: "100,1500"
- assertVisible: "Summary"

# YEARLY
- tapOn: "Yearly"
- assertVisible: "Expenses:"
- assertVisible: "Income:"
- assertVisible: "Budgets:"
- assertVisible: "Savings Goals:"
- tapOn:
    point: "100,600"
- assertVisible: "Summary"
- tapOn:
    point: "100,900"
- assertVisible: "Summary"
- tapOn:
    point: "100,1200"
- assertVisible: "Summary"
- tapOn:
    point: "100,1500"
- assertVisible: "Summary"
