appId: com.dineshbali18.expensetrackerapp
---
- launchApp

- tapOn: "Sign in"

- tapOn:
    id: "emailInput"
- inputText:
    id: "emailInput"
    text: "dineshbali45@gmail.com"

- tapOn:
    id: "passwordInput"
- inputText:
    id: "passwordInput"
    text: "gamer45"

- tapOn: "Login"

- tapOn: "OK"

- assertVisible: "🔐 Two-Factor Authentication"

- tapOn:
    id: "otpInput"
- inputText:
    id: "otpInput"
    text: "123456"

- tapOn:
    id: "verifyOtpButton"

- tapOn: "Ok"

- assertVisible: "Budgets"

- tapOn: "Budgets"

- tapOn:
    id: "openManageBudgetsButton"

- tapOn:
    id: "budgetPicker"

- tapOn: "➕ Add New Budget"

- tapOn: "🏆 Budget Name"

- inputText:
    id: "budgetNameInput"
    text: "April Budget"

- tapOn: "🎯 Total Budget Amount"

- inputText:
    id: "targetAmountInput"
    text: "5000"
- tapOn: "💵 Amount Spent So Far"
- inputText:
    id: "spentAmountInput"
    text: "1000"

- tapOn:
    id: "addBudgetButton"
- assertVisible: "✅ Add Budget"
- tapOn: "✅ Add Budget"

- assertVisible: "🎯 April Budget: $1000.00 / $5000.00 (20%)"

- tapOn:
    id: "budgetPicker"

- tapOn: "April Budget"

- tapOn:
    id: "budgetNameInput"
- eraseText
- inputText:
    id: "budgetNameInput"
    text: "May Budget"

- tapOn: "5000.00"
- tapOn:
    id: "spentAmountInput"
- eraseText
- inputText:
    id: "spentAmountInput"
    text: "2000"

- tapOn:
    id: "updateBudgetButton"
- assertVisible: "🔄 Update Budget"
- tapOn: "🔄 Update Budget"

- assertVisible: "🎯 May Budget: $2000.00 / $5000.00 (40%)"

- tapOn:
    id: "deleteBudgetButton-42"

- assertNotVisible: "🎯 May Budget: $2000.00 / $5000.00 (40%)"

- tapOn:
    id: "closeManageBudgetsButton"
